docs/v4/en/room-quick-start.en.md
[Return to Parent Document](./index.en.md)

# Quick Start

## Prerequisites

[reference env doc](./env.en.md)

## Implementation

Take the following steps to implement message sending:

1. Create and initialize a project:

   [Refer to relevant section](./create-app.en.md)

2. Added permission.

   - For iOS, update the `ProjectName/Info.plist` file to add the following permissions:

     ```xml
     <dict>
       <!-- Start of append section -->
             <key>NSCameraUsageDescription</key>
             <string></string>
             <key>NSMicrophoneUsageDescription</key>
             <string></string>
             <key>NSPhotoLibraryUsageDescription</key>
             <string></string>
       <!-- End of additional section -->
     </dict>
     ```

   - For Android, update the `AndroidManifest.xml` file:

     ```xml
     <manifest xmlns:android="http://schemas.android.com/apk/res/android">
         <uses-permission android:name="android.permission.INTERNET"/>
         <uses-permission android:name="android.permission.CAMERA" />
         <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.RECORD_AUDIO" />
     </manifest>
     ```

3. Add dependencies.

   ```bash
   yarn add react-native-linear-gradient \
     react-native-chat-room \
     react-native-chat-sdk \
     react-native-safe-area-context
   ```

4. Implement code.

   The main code added includes logging in, logging out, and into chat room:

   ```typescript
   import * as React from 'react';
   import {
     Platform,
     Pressable,
     SafeAreaView,
     StyleSheet,
     Text,
     View,
   } from 'react-native';
   import {useSafeAreaInsets} from 'react-native-safe-area-context';
   import {
     Chatroom,
     Container,
     TextInput,
     useRoomContext,
   } from 'react-native-chat-room';

   const appKey = '<your app key>';
   const userId = '<current login id>';
   const userName = '<current login name>';
   const userToken = '<current login token or password>';
   const userAvatar = '<current login avatar url>';
   const roomId = '<chat room ID>';
   const room = {
     roomId: roomId,
     owner: userId,
   };

   function SendMessage() {
     const [page, setPage] = React.useState(0);
     const [_appKey, setAppKey] = React.useState(appKey);
     const [id, setId] = React.useState(userId);
     const [ps, setPs] = React.useState(userToken);
     const im = useRoomContext();
     const {top} = useSafeAreaInsets();

     if (page === 0) {
       return (
         // Log in page
         <SafeAreaView style={styles.common}>
           <TextInput
             placeholder="Please App Key."
             value={_appKey}
             onChangeText={setAppKey}
           />
           <TextInput
             placeholder="Please Login ID."
             value={id}
             onChangeText={setId}
           />
           <TextInput
             placeholder="Please Login token or password."
             value={ps}
             onChangeText={setPs}
           />
           <Pressable
             style={styles.login}
             onPress={() => {
               // Use a custom avatar and nickname.
               im.login({
                 userId: id,
                 userToken: ps,
                 userNickname: userName,
                 userAvatarURL: userAvatar,
                 result: res => {
                   console.log('login result', res);
                   if (res.isOk === true) {
                     setPage(1);
                   }
                 },
               });
             }}>
             <Text>{'Login'}</Text>
           </Pressable>
           <Pressable
             style={styles.login}
             onPress={() => {
               im.logout({
                 result: () => {},
               });
             }}>
             <Text>{'Logout'}</Text>
           </Pressable>
         </SafeAreaView>
       );
     } else if (page === 1) {
       // chat room page
       return (
         <SafeAreaView style={styles.common}>
           <Chatroom
             messageList={{
               props: {
                 visible: true,
                 reportProps: {
                   data: [],
                 },
               },
             }}
             input={{
               props: {
                 keyboardVerticalOffset: Platform.OS === 'ios' ? top : 0,
                 after: [],
               },
             }}
             roomId={room.roomId}
             ownerId={room.owner}
             onError={e => {
               console.log('ChatroomScreen:onError:', e.toString());
             }}>
             <Pressable
               style={[styles.logout, styles.login]}
               onPress={() => {
                 setPage(0);
                 im.logout({
                   result: () => {},
                 });
               }}>
               <Text>{'log out'}</Text>
             </Pressable>
           </Chatroom>
         </SafeAreaView>
       );
     } else {
       return <View />;
     }
   }

   function App(): React.JSX.Element {
     // initialize the chat room
     return (
       <Container
         opt={{appKey: appKey, autoLogin: false, debugModel: true} as any}>
         <SendMessage />
       </Container>
     );
   }

   const styles = StyleSheet.create({
     common: {
       flex: 1,
     },
     logout: {
       position: 'absolute',
       top: 0,
       right: 0,
     },
     login: {
       height: 40,
       backgroundColor: 'darkseagreen',
       borderColor: 'floralwhite',
       borderWidth: 1,
     },
   });

   export default App;
   ```

5. Compile and run the project.

   - For iOS: Run `yarn run ios`.
   - For Android: Run `yarn run android`.

6. Send the first message.

   Click **Login** to enter the chat room page, enter the text, and click **Send**.
